feat: add handlebars support for email template
