# sample/typeorm-app/src/modules/mailer/send-mail.dto.ts
@@ -1,9 +1,20 @@
 export class SendMailDto {
   to: string;
   subject: string;
-  text: string;
-  html?: string;
+  content: MailContentDto;
   attachments?: MailAttachmentDto[];
+}
+
+export class MailContentDto {
+  text?: string;
+  html?: string;
+  template?: MailTemplateDto;
+}
+
+export class MailTemplateDto {
+  name?: string;
+  content?: string;
+  context?: any;
 }
 
 export class MailAttachmentDto {
